QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog


GIT HEAD

- Marked as probably useless anyway, old "H/W Monitor"
  option (-H) is now being ditched from Setup / Settings
  / Advanced tab.

- Graph port/connections highlighting. (EXPERIMENTAL)


0.5.4  2018-09-24  An Early Autumn'18 Release.

- Graph port-type colors are now configurable (cf. menu
  View > Colors.

- Make Graph nodes (ie. client boxes) transparent for yet
  some eye-candiness ;). Also keep the (Graph) current
  selection across port (dis)connections.

- Drawing patchbay connector lines as (bezier) curves is
  now a difinitive and fixed feature (as long as no more
  remains from the so called "Cambric explosion era" are
  still lurking in there).

- AppStream metadata updated to be the most compliant with
  latest freedesktop.org specification and recommendation.

- Graph auto-layout improvement for brand new node clients.

- Avoid showing setup warning when no server settings have
  changed.

- Fixed JACK D-Bus settings for MIDI driver parameter.


0.5.3  2018-07-22  A Summer'18 Release.

- Portuguese (pt) translation added (by Heitor Rocha).

- AppData/AppStream metadata is now settled under an all
  permisssive license (FSFAP).

- Improved Graph rubberband add (Shift) and toggle (Ctrl)
  multiple (de)selections.

- Added user preference option: Setup / Misc / Buttons /
  Replace Connections with Graph button (on main window).

- Added a zoom slider control to the Graph view status bar.


0.5.2  2018-05-27  Pre-LAC2018 release frenzy hotfix.

- Respect ALSA Sequencer support option also on Graph view.

- Regression to new Graph node/ports sorting comparator;
  also fixed multiple and many port removals, most probably
  causing it to crash due to double-free/delete potential.

- Fixed the automatic aggregation of new Graph client nodes
  that are split as either input or output only (ie. system,