@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+- Attempt to power-cycle JACK D-Bus service on demand.
+
 - Marked as probably useless anyway, old "H/W Monitor"
   option (-H) is now being ditched from Setup / Settings
   / Advanced tab.
